--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-
+    <header>
+      <h1>PUERTO RICO AIRLINES</h1>
+      <button class="header-button">HOME</button>
+      <button class="header-button">FLGIHTS</button>
+      <button class="header-button">SUPPORT</button>
+      <button class="header-button">LOGIN</button>
+    </header>
+    <main>
+      <div class="flex-container">
+        <div class="card">
+          <h3>Flights</h3>
+          <p>Come check out our sweet flights!<br>Direct flights available daily!</p>
+          <button class="card-button">Lets go</button>
+        </div>
+        <div class="card">
+          <h3>Group Trips</h3>
+          <p>Come check out our sweet flights!<br>Direct flights available daily!</p>
+          <button class="card-button">Group Rates</button>
+        </div>
+        <div class="card">
+          <h3>Discount Flights</h3>
+          <p>Come check out our sweet flights!<br>Direct flights available daily!</p>
+          <button class="card-button">Jump in</button>
+        </div>
+      </div>
+      <div class="flex-container">
+        <div class="card">
+          <h3>About us</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi molestiae itaque nostrum sequi repudiandae! Suscipit eveniet aut architecto adipisci distinctio pariatur, asperiores, laudantium exercitationem autem ducimus ea in! Sequi, corporis.</p>
+          <button class="card-button">Learn More</button>
+        </div>
+    </div>
+    </main>
   </body>
 </html>
